Fix card bug on mobile

--- a/src/Card.scss
+++ b/src/Card.scss
@@ -7,8 +7,8 @@ $box-shadow: rgba(0, 0, 0, 11%) 0px 1px 6px 0px;
     margin: .5em 1em .5em 1em;
     padding: .5em .5em .5em .5em;
     box-shadow: #00000069 0px 1px 6px 0px;
-    width: 90%;
-    height: 90%;
+    min-width: 90%;
+    min-height: 90%;
     justify-content: space-evenly;
     overflow: hidden;
 }
